--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,30 +2,8 @@
 spring:
   application:
     name: retrieve-production-companies-service
-
-# Port Service
-server:
-  port: 8016
-
-# API URL
-resource:
-  api:
-    url:
-      base: https://api.themoviedb.org/3/movie/
-      image: https://image.tmdb.org/t/p/w342
-    key: "?api_key=0a2eea61408ba5facdd057f7d11d2f58"
-    language: "&language=fr-FR"
-
-# DEBUG
-debug: true
-
-# LOG
-#logging:
-#  path: /var/log/retrieve-production-companies-service/
-#  file: /var/log/retrieve-production-companies-service/retrieve-production-companies-service.log
-
-# Eureka Client
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+  cloud:
+    config:
+      env: default # optional
+      label: master # optional
+      uri: ${CONFIG_SERVER:http://localhost:8888} # optional
